@@ -1,3 +1,8 @@
+2000-01-02  Harlan Stenn  <stenn@whimsy.udel.edu>
+
+	* ntpd/ntp_refclock.c: HAVE_PPSAPI header cleanup
+	From: Reg Clemens <reg@dwf.com>
+
 2000-01-01  Harlan Stenn  <stenn@whimsy.udel.edu>
 
 	* configure.in (CLOCK_WWV): Require <sys/audioio.h> or <sun/audioio.h>
